--- a/WorldTrotter-Ch_03/Base.lproj/Main.storyboard
+++ b/WorldTrotter-Ch_03/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ugl-J7-WB3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="y8L-B9-Ovf">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
-        <!--Conversion View Controller-->
+        <!--Convert-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldTrotter_Ch_03" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Convert" id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldTrotter_Ch_03" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -78,6 +78,7 @@
                             <outletCollection property="gestureRecognizers" destination="0ey-Fv-pEy" appends="YES" id="SZ3-jL-WN4"/>
                         </connections>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Convert" image="Convert 30px @ 1x" id="GEE-Xe-hGi"/>
                     <connections>
                         <outlet property="celsiusLabel" destination="TML-HO-cxw" id="c2e-Z5-1KT"/>
                         <outlet property="textField" destination="9UL-JX-Y52" id="cu9-xn-isK"/>
@@ -90,21 +91,45 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="549" y="514"/>
+            <point key="canvasLocation" x="2135" y="1270"/>
         </scene>
-        <!--View Controller-->
+        <!--Map-->
         <scene sceneID="5H0-FV-o0D">
             <objects>
-                <viewController id="ugl-J7-WB3" sceneMemberID="viewController">
+                <viewController title="Map" id="ugl-J7-WB3" customClass="MapViewController" customModule="WorldTrotter_Ch_03" customModuleProvider="target" sceneMemberID="viewController">
                     <mapView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="7Yq-42-LxL">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <animations/>
                     </mapView>
+                    <tabBarItem key="tabBarItem" title="Map" image="Map 30px @ 1x" id="hs3-oG-IOh"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="17O-tj-0w3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2135" y="514"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="8P0-RN-5tI">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="y8L-B9-Ovf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="TlB-aH-va5">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ugl-J7-WB3" kind="relationship" relationship="viewControllers" id="Ui0-D5-8dQ"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="ynR-MR-QsT"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QyZ-it-AbT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1323" y="514"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Convert 30px @ 1x" width="30" height="30"/>
+        <image name="Map 30px @ 1x" width="30" height="30"/>
+    </resources>
 </document>
